# Bilevel-Differential-Grasp-Optimization

./: .gitignore  .project  .pydevproject  BilevelOptimizer.py  Bilevel_differential_grasp_planner.ipynb  Bilevel_differential_grasp_planner.py  CMakeLists.txt  ConvexHulls.py  ConvexhullSettings.py  Directions.py  Distance.py  DistanceCubic.py  DistanceExact.py  GSSQP.py  Hand.py  HandObjective.py  HandTarget.py  LineSearcher.py  MeritFunction.py  Metric.py  Objectives.py  Optimizer.py  Plot.py  PoissonDiskSampling.py  Q_optimizer.py  README  README.md  SQPInterface.py  batch_step.py  bt  commit.sh  commit_kraftoreo.ps1  commit_kraftoreo.sh  convex_hulls.py  cosh_test.py  curve_fitting.py  function.py  graspitGeneration.py  hand.py  install.sh  (+20 more)
.ipynb_checkpoints/: Bilevel_differential_grasp_planner-checkpoint.ipynb
Articulated/: ArticulatedBody.cpp  ArticulatedBody.h  ArticulatedLoader.cpp  ArticulatedLoader.h  ArticulatedUtils.cpp  ArticulatedUtils.h  ConvexHull.cpp  ConvexHull.h  Joint.cpp  Joint.h  JointFunc.cpp  JointFunc.h  LeviCivita.h  MDP.cpp  MDP.h  MDPSimulator.cpp  MDPSimulator.h  MultiPrecisionLQP.cpp  MultiPrecisionLQP.h  MultiPrecisionSeparatingPlane.cpp  MultiPrecisionSeparatingPlane.h  NEArticulatedGradientInfo.cpp  NEArticulatedGradientInfo.h  PBDArticulatedGradientInfo.cpp  PBDArticulatedGradientInfo.h  PBDSimulator.cpp  PBDSimulator.h  PDTarget.cpp  PDTarget.h  RigidBodyMass.cpp  RigidBodyMass.h  SimplifiedDynamics.cpp  SimplifiedDynamics.h  TensorContractPragma.h
CommonFile/: CameraModel.h  CollisionDetection.cpp  CollisionDetection.h  CollisionDetectionImpl.h  CollisionFunc.h  Config.cpp  Config.h  GridBasic.cpp  GridBasic.h  Hash.cpp  Hash.h  Heap.h  IO.h  IOBasic.cpp  IOBasic.h  IOFwd.h  ImplicitFuncInterface.h  Interp.h  MakeMesh.cpp  MakeMesh.h  MarchingCube2D.h  MarchingCube2DVolume.h  MarchingCubeTable.h  MathBasic.h  ObjMesh.cpp  ObjMeshImpl.h  ParallelPoissonDiskSampling.cpp  ParallelPoissonDiskSampling.h  ParticleCD.cpp  ParticleCD.h  ParticleSet.h  ParticleToGrid.h  StaticPool.h  Zero.h  basicVar.wxm
DistanceExact/: BBoxExact.cpp  BBoxExact.h  CMakeLists.txt  ImplicitFuncMeshExact.cpp  ImplicitFuncMeshExact.h  MPQZIO.cpp  MPQZIO.h  ObjMeshGeomCellExact.cpp  ObjMeshGeomCellExact.h  PythonInterface.cpp  PythonInterface.h  RotationUtil.h  TriangleExact.cpp  TriangleExact.h
DistanceExact/CommonFile/: BeginAllEigen.h  CameraModel.h  CollisionDetection.cpp  CollisionDetection.h  ComputeWeightInterface.cpp  ComputeWeightInterface.h  Config.cpp  DisjointSet.h  GridBasic.cpp  GridBasic.h  GridOp.cpp  GridOp.h  IO.cpp  IOBasic.cpp  IOBasic.h  IOFwd.h  ImplicitFunc.cpp  ImplicitFunc.h  Interp.h  MakeMesh.cpp  MarchingCube3D.h  MathBasic.cpp  MathBasic.h  ObjMesh.cpp  ObjMesh.h  ObjMeshHeader.h  ParallelPoissonDiskSampling.cpp  ParticleCD.h  ParticleSet.h  PoissonDiskSampling.h  StaticPool.h  Timing.cpp  Timing.h  VelocitySet.h  Zero.h
DistanceExact/CommonFile/geom/: BVHBuilder.h  BVHNode.h  BoxGeomCell.cpp  BoxGeomCell.h  CapsuleGeomCell.cpp  CapsuleGeomCell.h  CompositeGeomCell.cpp  CompositeGeomCell.h  CylinderGeomCell.cpp  CylinderGeomCell.h  HeightFieldGeomCell.cpp  HeightFieldGeomCell.h  ObjMeshGeomCell.cpp  ObjMeshGeomCell.h  SphereGeomCell.cpp  SphereGeomCell.h  SphereMeshCell.cpp  SphereMeshCell.h  SphericalBoxGeomCell.cpp  SphericalBoxGeomCell.h  StaticGeom.cpp  StaticGeom.h  StaticGeomCell.h
DistanceExact/Utils/: DebugGradient.h  Instantiate.h  Options.h  ParallelVector.h  ScalarMpfr.cpp  ScalarMpfr.h  ScalarQ.cpp  ScalarQ.h  SparseUtils.h
DistanceExact/cmake/modules/: FindMPFR.cmake  FindQUADMATH.cmake  FindTINYXML2.cmake  LoadLibs.cmake
Environment/: BBoxExact.cpp  BBoxExact.h  BeginAllEigen.h  CollisionConstraint.cpp  CollisionConstraint.h  ConvexHullExact.cpp  ConvexHullExact.h  EdgeExact.cpp  EdgeExact.h  EndAllEigen.h  EnvWrenchConstructor.cpp  EnvWrenchConstructor.h  Environment.cpp  Environment.h  GranularWrenchConstructor.cpp  GranularWrenchConstructor.h  MPQZIO.cpp  MPQZIO.h  ObjMeshGeomCellExact.cpp  ObjMeshGeomCellExact.h  Simulator.cpp  Simulator.h  TriangleExact.cpp  TriangleExact.h  openGJK.c
Grasp/: ArticulatedObjective.cpp  ArticulatedObjective.h  CentroidClosednessEnergy.cpp  CentroidClosednessEnergy.h  FGTTreeNode.cpp  FGTTreeNode.h  GraspPlanner.cpp  GraspPlanner.h  GraspQualityMetric.cpp  GraspQualityMetric.h  LogBarrierObjEnergy.cpp  LogBarrierObjEnergy.h  LogBarrierSelfEnergy.cpp  LogBarrierSelfEnergy.h  MetricEnergy.cpp  MetricEnergy.h  ObjectClosednessEnergy.cpp  ObjectClosednessEnergy.h  PrimalDualQInfMetricEnergy.cpp  PrimalDualQInfMetricEnergy.h  PrimalDualQInfMetricEnergyFGT.cpp  PrimalDualQInfMetricEnergyFGT.h
GraspDataset/: rename.sh
GraspItDataset/: BarrettHand10_small.off  BarrettHand10_small.xml  BarrettHand1_small.off  BarrettHand1_small.xml  BarrettHand2_small.off  BarrettHand2_small.xml  BarrettHand3_small.off  BarrettHand3_small.xml  BarrettHand3_small_initialParameters.txt  BarrettHand4_small.off  BarrettHand4_small.xml  BarrettHand4_small_initialParameters.txt  BarrettHand5_small.off  BarrettHand5_small.xml  BarrettHand5_small_initialParameters.txt  BarrettHand6_small.off  BarrettHand6_small.xml  BarrettHand7_small.off  BarrettHand7_small.xml  BarrettHand8_small.off  BarrettHand8_small.xml  BarrettHand9_small.off  BarrettHand9_small.xml  BarrettHand9_small_initialParameters.txt  ShadowHand10_small.off  ShadowHand10_small.xml  ShadowHand1_small.off  ShadowHand1_small.xml  ShadowHand2_small.off  ShadowHand2_small.xml  ShadowHand2_small_initialParameters.txt  ShadowHand3_small.off  ShadowHand3_small.xml  ShadowHand3_small_initialParameters.txt  ShadowHand4_small.off  ShadowHand4_small.xml  ShadowHand4_small_initialParameters.txt  ShadowHand5_small.off  ShadowHand5_small.xml  ShadowHand6_small.off  (+10 more)
Main/: GenericArticulatedObjective.h  mainArticulatedLoader.cpp  mainCompareMDPSimulatorRobosimian.cpp  mainCompareMDPSimulatorRobosimianPGM.cpp  mainCompareMDPSimulatorRobosimianZOPGM.cpp  mainCompareMDPSimulatorSpider.cpp  mainCompareMDPSimulatorSpiderPGM.cpp  mainComparePBDSimulatorBird.cpp  (+55 more)
(+1020 files in other folders)
